<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrwerLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="">//start

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawerheader"
        app:menu="@menu/drawable_menu">

    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlaceBid">


        <include
            android:id="@+id/primaryActbar"
            layout="@layout/primary_actionbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/placeBidImg"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fashion1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primaryActbar">

        </ImageView>


        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/placeBidImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/primaryActbar">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rounded_contentarea"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/PlaceBid_Title"
                android:textColor="@color/Black"
                android:textSize="36sp"
                android:textStyle="bold">

            </TextView>


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeBidImg">



            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placeBidImg">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/placeBid_ItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableLeft="@drawable/item_a"
                    android:text="@string/ItemNameDemo"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/placeBid_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/item_no"
                    android:text="@string/demo_itemNo"
                    android:textSize="16sp">

                </TextView>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/Black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="3dp">

                        <TextView
                            android:id="@+id/placeBid_StartPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_Item_Price"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="26dp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/staarting_bid_caption"
                            android:textAlignment="center"
                            android:textSize="14dp">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="3dp">

                        <TextView
                            android:id="@+id/placeBid_MaxBid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/demo_Item_Price"
                            android:textAlignment="center"
                            android:textColor="@color/MDBdangercolor"
                            android:textSize="26dp"
                            android:textStyle="bold">

                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/CurrentHighestBid_Caption"
                            android:textAlignment="center"
                            android:textSize="14dp">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/EndingTime_caption"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/placeBid_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Ending_Date_Time_Demo"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <!--            <TextView-->
                    <!--                android:id="@+id/endatcap"-->
                    <!--                android:layout_width="wrap_content"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:text="@string/EndingTime_caption"-->
                    <!--                android:textSize="24sp"/>-->

                    <!--            <EditText-->
                    <!--                android:id="@+id/plaBid_val"-->
                    <!--                android:layout_width="200dp"-->
                    <!--                android:layout_height="2dp"-->
                    <!--                android:layout_gravity="bottom"/>-->


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="30dp"
                        android:foregroundGravity="center"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColorHint="@color/MDBgreycolor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/placeBid_newBidValue"
                            style="@style/Widget.Design.TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:hint="Enter Your Bid Here"
                            android:textSize="24sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/placeBid_ConfirmBidBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorPrimary"
                    android:elevation="8dp"
                    android:text="@string/confirmBid_Title"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_baseline_warning_24"
                        android:minWidth="50dp"
                        android:minHeight="50dp">

                    </androidx.appcompat.widget.AppCompatImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/deleteBidWarning"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>