...
    <string name="MaxBid_caption">Max Bid</string>
    <string name="Your_bid_caption">Your Bid</string>
    <string name="StartinfBid_caption">Starting Bid</string>
    <string name="AddBidCaption">Add your bid</string>
    <string name="IncreaseBidCaption">Increase your bid</string>
    <string name="DeleteBidCaption">Delete your bid</string>
    <string name="MybidsTitle">My Bids</string>
    <string name="MybidsCurrentBid">My Bid</string>
    <string name="PlaceBid_Caption">Place Bid</string>
    <string name="PlaceBid_Title">Place Your Bid</string>
    <string name="demo_itemNo">ITEM12458</string>
    <string name="demo_Item_Price">2500.00 Rs</string>
    <string name="staarting_bid_caption">Starting Bid</string>
    <string name="CurrentHighestBid_Caption">Current Highest Bid</string>
    <string name="Ending_Date_Time_Demo">18:00:00  2020/08/15</string>
    <string name="placeBid_text_show">Enter Your Bid Here</string>
    <string name="confirmBid_Title">Confirm Bid</string>
    <string name="MyAuctionpageTitle">My Auctions</string>
    <string name="AuctionIdDemo">AUC1245</string>
    <string name="AuctionCategoryCaption">Category</string>
    <string name="StatusCaption">Status</string>
    <string name="viewAuction">View Auction</string>
    <string name="MyWinsTitle">My Wins</string>
...
