...
                    android:textColor="@color/Black"
                    android:textAlignment="center"
                    android:textStyle="bold">

                </Button>
                <Button
                    android:id="@+id/displatAuctToBidButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorPrimary"
                    app:strokeColor = "@color/colorPrimary"
                    app:backgroundTint = "@color/colorPrimary"
                    android:text="Continue to Bid"
                    android:textColor="@color/Black"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="80dp">

                </Button>
...
